testdata/baselines/reference/submodule/conformance/moduleExportAssignment3.errors.txt
mod.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== npm.js (0 errors) ====
    var mod = require('./mod')
    mod() // should be callable from here too
    
==== mod.js (2 errors) ====
    module.exports = function x() { }
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    module.exports() // should be callable
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    